feat(task): modify getTaskByUser method and create mapTaskToTaskDTO method